discussion/platform.ui/170931/170931_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

Bug 549929 - fixed javadoc errors

Fixed jabadoc errors reported in
https://download.eclipse.org/eclipse/downloads/drops4/I20201018-1800/logs.php#javadoc

../../../eclipse.platform.ui/bundles/org.eclipse.ui.workbench/Eclipse
UI/org/eclipse/ui/plugin/AbstractUIPlugin.java:176: error: unexpected
content
	 * @deprecated @see {@link
PlatformUI#getDialogSettingsProvider(Bundle)}
	               ^
../../../eclipse.platform.ui/bundles/org.eclipse.ui.workbench/Eclipse
UI/org/eclipse/ui/plugin/AbstractUIPlugin.java:398: error: reference not
found
	 * @deprecated @see DialogSettingsService
	                    ^
2 errors

Change-Id: I5256e800670a4c0f27e5b2b008ec8f855f09b3ca
Signed-off-by: Andrey Loskutov <loskutov@gmx.de>

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Andrey Loskutov
Date: 2020-10-19 11:11:41.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Platform Bot
Date: 2020-10-19 11:12:16.000000000
Message: 
Patch Set 1:

Build Started https://ci.eclipse.org/platform/job/eclipse.platform.ui-Gerrit/24045/
----------------------------------------------------------------------------------------------------------------------
Author: Platform Bot
Date: 2020-10-19 11:22:33.000000000
Message: 
Patch Set 1: Verified-1

Build Failed 

https://ci.eclipse.org/platform/job/eclipse.platform.ui-Gerrit/24045/ : FAILURE
----------------------------------------------------------------------------------------------------------------------
Author: Platform Bot
Date: 2020-10-19 11:25:46.000000000
Message: 
Patch Set 1: -Verified

Build Started https://ci.eclipse.org/platform/job/eclipse.platform.ui-Gerrit/24046/
----------------------------------------------------------------------------------------------------------------------
Author: Matthias Becker
Date: 2020-10-19 11:45:29.000000000
Message: 
Patch Set 1:

(1 comment)
Line:9, /COMMIT_MSG -> javadoc ?

----------------------------------------------------------------------------------------------------------------------
Author: Platform Bot
Date: 2020-10-19 12:03:49.000000000
Message: 
Patch Set 1: Verified+1

Build Successful 

https://ci.eclipse.org/platform/job/eclipse.platform.ui-Gerrit/24046/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Andrey Loskutov
Date: 2020-10-19 12:10:18.000000000
MISMATCHED INLINE COMMENT
Line:9, /COMMIT_MSG -> sure
----------------------------------------------------------------------------------------------------------------------
